--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,12 +15,17 @@ jobs:
       - name: Docker login
         run: docker login -u bitmetro -p ${{ secrets.DOCKER_PASSWORD }} docker.io
 
+      - name: Create Dockerfile
+        run: make build-dockerfile
+
       - name: Build and push web app
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./apps/web
+          context: .
           tags: bitmetro/phrase-gen-app:${{ github.ref_name }}
+          build-args: |
+            SCOPE=web
 
       - name: Build and push api
         uses: docker/build-push-action@v2
@@ -28,3 +33,5 @@ jobs:
           push: true
           context: ./apps/api
           tags: bitmetro/phrase-gen-api:${{ github.ref_name }}
+          build-args: |
+            SCOPE=api
