--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,6 +27,9 @@ jobs:
           build-args: |
             SCOPE=web
 
+      - name: Create Dockerfile
+        run: make build-dockerfile
+
       - name: Build and push api
         uses: docker/build-push-action@v2
         with:
