ci: normal dockerfile. pass port in arg

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,9 +15,6 @@ jobs:
       - name: Docker login
         run: docker login -u bitmetro -p ${{ secrets.DOCKER_PASSWORD }} docker.io
 
-      - name: Create Dockerfile
-        run: make build-dockerfile
-
       - name: Build and push web app
         uses: docker/build-push-action@v2
         with:
@@ -26,6 +23,7 @@ jobs:
           tags: bitmetro/phrase-gen-app:${{ github.ref_name }}
           build-args: |
             SCOPE=web
+            PORT=3000
 
       - name: Build and push api
         uses: docker/build-push-action@v2
@@ -35,3 +33,4 @@ jobs:
           tags: bitmetro/phrase-gen-api:${{ github.ref_name }}
           build-args: |
             SCOPE=api
+            PORT=3001
