--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,13 +22,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@bitmetro/phrase-gen": "*",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "google-auth-library": "^8.5.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "@bitmetro/phrase-gen": "*"
+    "@bitmetro/phrase-gen-dtos": "*"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -36,6 +40,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
