--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
