refactor: client ids don't need to be secret

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,8 +25,8 @@ jobs:
             SCOPE=web
             PORT=3000
             NEXT_PUBLIC_API_URL=https://phrase-gen-api.bitmetro.io
-            NEXT_PUBLIC_GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-            NEXT_PUBLIC_FB_APP_ID=${{ secrets.FB_APP_ID }}
+            NEXT_PUBLIC_GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
+            NEXT_PUBLIC_FB_APP_ID=768507144435011
 
 
       - name: Build and push api
@@ -40,8 +40,8 @@ jobs:
             PORT=3001
             FRONTEND_URL=https://phrase-gen.bitmetro.io
             JWT_SIGNING_KEY=${{ secrets.JWT_SIGNING_KEY }}
-            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
             GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-            FB_APP_ID=${{ secrets.FB_APP_ID }}
+            FB_APP_ID=768507144435011
             FB_APP_SECRET=${{ secrets.FB_APP_SECRET }}
             DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}
