--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-facebook-login": "^4.1.1",
+    "react-simple-code-editor": "^0.13.0",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
