--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,28 +20,17 @@ jobs:
         with:
           push: true
           context: .
+          file: Dockerfile.web
           tags: bitmetro/phrase-gen-app:${{ github.ref_name }}
           build-args: |
             SCOPE=web
-            PORT=3000
-            NEXT_PUBLIC_API_URL=https://phrase-gen-api.bitmetro.io
-            NEXT_PUBLIC_GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
-            NEXT_PUBLIC_FB_APP_ID=768507144435011
-
 
       - name: Build and push api
         uses: docker/build-push-action@v2
         with:
           push: true
           context: .
+          file: Dockerfile.api
           tags: bitmetro/phrase-gen-api:${{ github.ref_name }}
           build-args: |
             SCOPE=api
-            PORT=3001
-            FRONTEND_URL=https://phrase-gen.bitmetro.io
-            JWT_SIGNING_KEY=${{ secrets.JWT_SIGNING_KEY }}
-            GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
-            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-            FB_APP_ID=768507144435011
-            FB_APP_SECRET=${{ secrets.FB_APP_SECRET }}
-            DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}
