--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,25 @@ on:
       - "*"
 
 jobs:
-  push:
+  api:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Docker login
+        run: docker login -u bitmetro -p ${{ secrets.DOCKER_PASSWORD }} docker.io
+
+      - name: Build and push api
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: .
+          file: Dockerfile.api
+          tags: bitmetro/phrase-gen-api:${{ github.ref_name }}
+          build-args: |
+            SCOPE=api
+  web:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,13 +42,3 @@ jobs:
           tags: bitmetro/phrase-gen-app:${{ github.ref_name }}
           build-args: |
             SCOPE=web
-
-      - name: Build and push api
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          context: .
-          file: Dockerfile.api
-          tags: bitmetro/phrase-gen-api:${{ github.ref_name }}
-          build-args: |
-            SCOPE=api
