--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
     "@react-oauth/google": "^0.2.6",
     "antd": "^4.22.8",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.2.5",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-facebook-login": "^4.1.1",
