--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -4,6 +4,10 @@ WORKDIR /app
 
 ARG SCOPE
 
+ENV NEXT_PUBLIC_API_URL=https://phrase-gen-api.bitmetro.io
+ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
+ENV NEXT_PUBLIC_FB_APP_ID=768507144435011
+
 COPY . .
 RUN yarn global add turbo@1.5.5 && \
     turbo prune --scope=${SCOPE} && \
