ci: cleanup dockerfile

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,12 +1,16 @@
+ARG NEXT_PUBLIC_API_URL=https://phrase-gen-api.bitmetro.io
+ARG NEXT_PUBLIC_GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
+ARG NEXT_PUBLIC_FB_APP_ID=768507144435011
+
 FROM node:16-alpine as builder
 
 WORKDIR /app
 
 ARG SCOPE
 
-ENV NEXT_PUBLIC_API_URL=https://phrase-gen-api.bitmetro.io
-ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
-ENV NEXT_PUBLIC_FB_APP_ID=768507144435011
+ENV NEXT_PUBLIC_API_URL=NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ENV NEXT_PUBLIC_FB_APP_ID=NEXT_PUBLIC_FB_APP_ID
 
 COPY . .
 RUN yarn global add turbo@1.5.5 && \
@@ -24,9 +28,9 @@ COPY --chown=node:node --from=builder /app/out .
 ARG SCOPE
 
 ENV NODE_ENV=production
-ENV NEXT_PUBLIC_API_URL=https://phrase-gen-api.bitmetro.io
-ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=417389414400-vig6vjcsj4uj0kujoscrnj9oj9n5jn24.apps.googleusercontent.com
-ENV NEXT_PUBLIC_FB_APP_ID=768507144435011
+ENV NEXT_PUBLIC_API_URL=NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ENV NEXT_PUBLIC_FB_APP_ID=NEXT_PUBLIC_FB_APP_ID
 
 WORKDIR /app/apps/${SCOPE}
 
