ci: fix dockerfile

--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -8,9 +8,9 @@ WORKDIR /app
 
 ARG SCOPE
 
-ENV NEXT_PUBLIC_API_URL=NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=NEXT_PUBLIC_GOOGLE_CLIENT_ID
-ENV NEXT_PUBLIC_FB_APP_ID=NEXT_PUBLIC_FB_APP_ID
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=$NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ENV NEXT_PUBLIC_FB_APP_ID=$NEXT_PUBLIC_FB_APP_ID
 
 COPY . .
 RUN yarn global add turbo@1.5.5 && \
@@ -28,9 +28,9 @@ COPY --chown=node:node --from=builder /app/out .
 ARG SCOPE
 
 ENV NODE_ENV=production
-ENV NEXT_PUBLIC_API_URL=NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=NEXT_PUBLIC_GOOGLE_CLIENT_ID
-ENV NEXT_PUBLIC_FB_APP_ID=NEXT_PUBLIC_FB_APP_ID
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=$NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ENV NEXT_PUBLIC_FB_APP_ID=$NEXT_PUBLIC_FB_APP_ID
 
 WORKDIR /app/apps/${SCOPE}
 
