--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -7,6 +7,9 @@ FROM node:16-alpine as builder
 WORKDIR /app
 
 ARG SCOPE
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ARG NEXT_PUBLIC_FB_APP_ID
 
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=$NEXT_PUBLIC_GOOGLE_CLIENT_ID
@@ -26,6 +29,9 @@ WORKDIR /app
 COPY --chown=node:node --from=builder /app/out .
 
 ARG SCOPE
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ARG NEXT_PUBLIC_FB_APP_ID
 
 ENV NODE_ENV=production
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
